fix: orb-container tamanho fixo 720px, independente do orb-wrap

--- a/frontend/src/app/components/Orb.css
+++ b/frontend/src/app/components/Orb.css
@@ -1,6 +1,6 @@
 .orb-container {
-  width: 110%;
-  height: 110%;
+  width: 720px;
+  height: 720px;
   position: absolute;
   top: 50%;
   left: 50%;
